FullQa New/src/Adobe Sign/objects/SIGN_Recipients__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>SIGN_Agreement__c</referenceTo>
        <relationshipLabel>Echosign Recipients</relationshipLabel>
        <relationshipName>Echosign_Recipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Echosign Recipients</relationshipLabel>
        <relationshipName>Echosign_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>Applicable for the Recipient Type = Email</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Echosign Recipients</relationshipLabel>
        <relationshipName>Echosign_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Echosign Recipients</relationshipLabel>
        <relationshipName>Echosign_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient_Type__c</fullName>
        <description>Stores the Type of the Recipient</description>
        <label>Recipient Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Echosign_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>useEmailAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>useEmailAddress</label>
        <type>Checkbox</type>
    </fields>
    <label>Echosign Recipient</label>
    <nameField>
        <label>Echosign Recipient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Echosign Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>